tests/fixtures/syntax/invalid/document_case_duplicate_field.repor
# Declaring the same field twice in one document case block is rejected
# (parse.document_block.duplicate_field).
document case {
  title "first"
  title "second"
}

case "never parsed" {
  $ true
  assert {
    exit 0
  }
}
